# Slot-Machines

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/Parse/: sounds.sml  texture.tml
GameBuild_Slot-Machines/Assets/Parse/: sounds.sml
src/: AnimationSprite.cpp  AnimationSprite.h  Axis.h  Background.cpp  Background.h  Button.cpp  Button.h  GameManager.cpp  GameManager.h  Input.cpp  Input.h  Mouse.h  Object.cpp  Object.h  SoundsManager.cpp  TextureManager.cpp  TextureManager.h  Timer.cpp  xmltest.cpp
src/Abstract classes/: SlotAbstract.h
src/Animations/: Animation.h  AnimationSprite.cpp
src/Controls/: Button.cpp  Button.h  Collider2D.h  Input.cpp  Input.h  Mouse.h  Pointer.h  Properties.h  RigidBody.h  Timer.cpp  Timer.h  Transform.h  Vector2D.h
src/Interfaces/: IObject.h
src/Managers/: FontManager.cpp  FontManager.h  GameManager.cpp  GameManager.h  SaveManagers.cpp  SaveManagers.h  SoundsManager.cpp  SoundsManager.h  TextureManager.cpp  TextureManager.h
src/Objects/: Background.cpp  GameObject.h  Object.cpp  Object.h  Slot.cpp  Slot.h
src/Structures/: PlayerStatics.h
src/XmlParser/: tinyxml.h
